# altostratus

./: Cargo.toml  README.md  ROADMAP.md
datasets/: cube.txt  points.txt  random_mesh.txt  spiral.txt  stella_octangula.txt  torus.txt  trefoil_knot.txt  wave_3d.txt  wave_radial.txt
examples/: ascii_rendering.rs  axes_test.rs  basic_rendering.rs  lorenz.rs  simple_ascii.rs  spiral.rs  spiral_ascii.rs
src/: args.rs  ascii_renderer.rs  axes.rs  camera.rs  graphics.rs  image_renderer.rs  lib.rs  main.rs  renderer.rs
